Adding assets and fixed conflicting widget commands.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
+    "layouts": "^2.0.1",
     "pug": "^2.0.0-rc.4"
   },
   "devDependencies": {
